--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
@@ -13,6 +13,7 @@ body {
 h1 {
   font-family: "Montserrat-Bold", sans-serif;
   font-size: 4rem;
+  font-weight: bold;
   line-height: 1.5;
   padding-top: 50px;
   margin: 1.5rem;
@@ -39,6 +40,7 @@ p {
   font-family: "Ubuntu";
   font-size: 2.5rem;
   font-weight: bold;
+  margin: 1.5rem;
 }
 
 .nav.item{
