--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
@@ -10,30 +10,35 @@ body {
   padding: 3% 15%;
 }
 
-h1 {
-  font-family: "Montserrat-Bold", sans-serif;
-  font-size: 4rem;
-  font-weight: bold;
-  line-height: 1.5;
-  padding-top: 50px;
-  margin: 1.5rem;
- 
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Montserrat-Bold", sans-serif;
 }
 
 h2 {
-    font-family: "Montserrat-Bold", sans-serif;
+
     font-size: 3rem;
     font-weight: bold;
     line-height: 1.5;
 }
 
 h3 {
-   font-family: "Montserrat-Bold", sans-serif;
+ 
    font-size: 1.5rem;
 }
 
 p {
     color: #8f8f8f;
+}
+
+/* Headings */
+
+.big-heading {
+  
+    font-size: 4rem;
+    font-weight: bold;
+    line-height: 1.5;
+    padding-top: 50px;
+    margin: 1.5rem;
 }
 
 /* navbar */
