--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
@@ -152,7 +152,9 @@ p {
 
 .price-text {
     font-size: 3rem;
-    line-height: 1.5;
+    font-style: bold;
+    font-weight: 400;
+    line-height: 2.5;
 }
 
 .pricing-column {
