--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
@@ -35,6 +35,10 @@ p {
     padding-top: 50px;
     margin: 1.5rem;
 }
+.section-head {
+    font-size: 3rem;
+    line-height: 1.5;
+}
 
 /* navbar */
 
