--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
@@ -14,13 +14,6 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat-Bold", sans-serif;
 }
 
-
-
-h3 {
- 
-   font-size: 1.5rem;
-}
-
 p {
     color: #8f8f8f;
 }
@@ -39,6 +32,8 @@ p {
     font-size: 3rem;
     line-height: 1.5;
 }
+
+
 
 /* navbar */
 
@@ -109,6 +104,10 @@ p {
 
 .feature-box {
     text-align: center;
+}
+
+.feature-title {
+    font-size: 1.5rem;
 }
 
 /* Testimonials */
