--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
@@ -1,9 +1,11 @@
 body {
   font-family: "Monserrat-Black", sans-serif;
+  text-align: center;
 }
 #title {
   background-color: #ff4c68;
   color: #fff;
+  text-align: left;
 }
 
 .container {
@@ -69,6 +71,7 @@ p {
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+    
 }
 
 /* Features */
@@ -102,9 +105,7 @@ p {
     padding: 7% 15%;
 }
 
-.feature-box {
-    text-align: center;
-}
+
 
 .feature-title {
     font-size: 1.5rem;
@@ -137,7 +138,6 @@ p {
 
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -150,7 +150,7 @@ p {
 
 #pricing {
     padding: 100px;
-    text-align: center;
+   
 }
 
 .price-text {
@@ -170,7 +170,7 @@ p {
     background-color: #ff4c68;
     height: 600px;
     padding: 7% 15%;
-    text-align: center;
+ 
 }
 
 .cta-header {
@@ -188,7 +188,7 @@ p {
 
 #footer {
     padding: 7% 15%;
-    text-align: center;
+    
 }
 
 .icon {
