--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
@@ -8,8 +8,8 @@ body {
   text-align: left;
 }
 
-.container {
-  padding: 3% 15%;
+.container-fluid {
+  padding: 7% 15%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -101,11 +101,6 @@ p {
  color: #ff4c68;
 }
 
-#features {
-    padding: 7% 15%;
-}
-
-
 
 .feature-title {
     font-size: 1.5rem;
@@ -132,9 +127,6 @@ p {
     line-height: 1.5;
 }
 
-.carousel-item {
-    padding: 7% 15%;
-}
 
 #press {
     background-color: #ef8172;
@@ -168,8 +160,8 @@ p {
 
 #cta {
     background-color: #ff4c68;
-    height: 600px;
-    padding: 7% 15%;
+    height: 350px;
+
  
 }
 
