--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
@@ -2,45 +2,44 @@ body {
   font-family: "Monserrat-Black", sans-serif;
   text-align: center;
 }
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-  text-align: left;
-}
+
+/* Containers */
 
 .container-fluid {
   padding: 7% 15%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Montserrat-Bold", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat-Bold", sans-serif;
 }
 
 p {
-    color: #8f8f8f;
+  color: #8f8f8f;
 }
 
 /* Headings */
 
 .big-heading {
-  
-    font-size: 4rem;
-    font-weight: bold;
-    line-height: 1.5;
-    padding-top: 50px;
-    margin: 1.5rem;
+  font-size: 4rem;
+  font-weight: bold;
+  line-height: 1.5;
+  padding-top: 50px;
+  margin: 1.5rem;
 }
 .section-head {
-    font-size: 3rem;
-    line-height: 1.5;
+  font-size: 3rem;
+  line-height: 1.5;
 }
-
-
 
 /* navbar */
 
 .navbar {
-   padding-bottom: 0 0 4.5rem; 
+  padding-bottom: 0 0 4.5rem;
 }
 
 .navbar-brand {
@@ -50,138 +49,133 @@ p {
   margin: 1.5rem;
 }
 
-.nav.item{
-    padding: 0 18px;
+.nav.item {
+  padding: 0 18px;
 }
 
 .nav-link {
-    font-size: 1.2rem;
-    font-family: "Monserrat-light", sans-serif;
+  font-size: 1.2rem;
+  font-family: "Monserrat-light", sans-serif;
 }
 
 /* Download buttons */
 
 .download-button {
-    margin: 1.5rem;
-    
+  margin: 1.5rem;
+}
+
+/* Title section */
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
 }
 
 /* Title Image */
 
 .title-image {
-    width: 60%;
-    transform: rotate(25deg);
-    
+  width: 60%;
+  transform: rotate(25deg);
 }
 
 /* Features */
 
 .feature-box {
-    color: #ef8172;
-    margin-bottom: 1.5rem;
+  color: #ef8172;
+  margin-bottom: 1.5rem;
 }
 
 .feature-box:hover {
-    color: #ff4c68;
+  color: #ff4c68;
 }
 
 .feature-title {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 /* Testimonials */
 
 #testimonials {
-   
-    text-align: center;
-    background-color: #ef8172;
-    color:#fff;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
 }
 
 .testimonial-image {
-    width: 10%;
-    border-radius: 100%;
-    margin: 20px;
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
 }
 
 .testimonial-text {
-    font-size: 3rem;
-    font-weight: bold;
-    line-height: 1.5;
+  font-size: 3rem;
+  font-weight: bold;
+  line-height: 1.5;
 }
 
-
 #press {
-    background-color: #ef8172;
-    padding-bottom: 3%;
+  background-color: #ef8172;
+  padding-bottom: 3%;
 }
 
 .press-logo {
-    width: 15%;
-    margin: 20px 20px 50px;
+  width: 15%;
+  margin: 20px 20px 50px;
 }
 
 /* Pricing section */
 
 #pricing {
-    padding: 100px;
-   
+  padding: 100px;
 }
 
 .price-text {
-    font-size: 3rem;
-    font-style: bold;
-    font-weight: 400;
-    line-height: 2.5;
+  font-size: 3rem;
+  font-style: bold;
+  font-weight: 400;
+  line-height: 2.5;
 }
 
 .pricing-column {
- padding: 3% 2%;
+  padding: 3% 2%;
 }
 
 /* Call to Action */
 
 #cta {
-    background-color: #ff4c68;
-    height: 350px;
-
- 
+  background-color: #ff4c68;
+  height: 350px;
 }
 
 .cta-header {
-    font-family: "Montserrat-Black", sans-serif;
-    font-size: 3.5rem;
-    line-height: 1.5;
-    font-style: bold;
-    font-weight: 500;
-    color: #fff;
-
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-style: bold;
+  font-weight: 500;
+  color: #fff;
 }
 
 /* Footer Section */
 
-
 #footer {
-    padding: 7% 15%;
-    
+  padding: 7% 15%;
 }
 
 .icon {
-    margin: 20 10;
-    
+  margin: 20 10;
 }
 
 @media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
 
-    #title {
-     text-align: center;
-    }
-
-    .title-image {
-        position: static;
-        transform: rotate(0);
-    }
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
 }
-
-
-
