--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/css/styles.css
@@ -22,6 +22,17 @@ p {
   color: #8f8f8f;
 }
 
+/* Sections */
+
+.colored-section {
+    background-color: #ff4c68;
+    color: #fff;
+}
+
+.white-section {
+    background-color: #fff;
+}
+
 /* Headings */
 
 .big-heading {
@@ -66,7 +77,7 @@ p {
 
 /* Title section */
 #title {
-  background-color: #ff4c68;
+
   color: #fff;
   text-align: left;
 }
@@ -147,7 +158,6 @@ p {
 /* Call to Action */
 
 #cta {
-  background-color: #ff4c68;
   height: 350px;
 }
 
