--- a/HTML-personal site/styles.css
+++ b/HTML-personal site/styles.css
@@ -1,17 +1,37 @@
+html, body {
+    width: 100%;
+    height:100%;
+  }
+  
+  body {
+      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+  }
 
-body {
-    background-color: #EAF6F6;
-}
-hr {
-   border-style: none;
-    border-top-style: dotted;
-    border-color: grey;
-    border-width: 5px;
-    width: 10%;
-}
-h1 {
-    color: #66bfbf;
-}
-h3 {
-    color: #66bfbf;
-}
+  hr {
+    border-style: none;
+     border-top-style: dotted;
+     border-color: grey;
+     border-width: 5px;
+     width: 10%;
+ }
+ h1 {
+     color: #66bfbf;
+ }
+ h3 {
+     color: #66bfbf;
+ }
+  
+  @keyframes gradient {
+      0% {
+          background-position: 0% 50%;
+      }
+      50% {
+          background-position: 100% 50%;
+      }
+      100% {
+          background-position: 0% 50%;
+      }
+  }
+
